--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.10.2)
 
 project(ipc)
 
-add_executable(client client.cpp)
-add_executable(server server.cpp)
+add_executable(client client.c)
+add_executable(server server.c)
